feat: add config, controller, model, repo, requestDto, service and some endpoints

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=FlightTicketReservationSystem
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.couchbase.connection-string=localhost
+spring.couchbase.bucket.name=flightDB
+spring.couchbase.username=Administrator
+spring.couchbase.password=root123
