--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-credit-cards-2": "^1.0.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
